--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.14.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-redux": "^7.1.16",
+    "cuid": "^2.1.8",
     "miragejs": "^0.1.41",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -24,6 +25,7 @@
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "typescript": "^4.1.5",
     "web-vitals": "^0.2.4",
@@ -38,7 +40,8 @@
     "workbox-range-requests": "^5.1.4",
     "workbox-routing": "^5.1.4",
     "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "workbox-streams": "^5.1.4",
+    "write-json-file": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
